--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,39 @@
-<h1>
-  Welcome to homepage !
-</h1>
+<div class="row">
+  <div class="col col-8 col-sm-4 mx-auto text-center">
+    <h1 class="my-3">
+      Account Login
+    </h1>
+    <form action="/" method="POST" class="needs-validation" novalidate>
+      <div class="mb-3">
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          placeholder="user1@example.com"
+          required
+        />
+        <div class="valid-feedback">
+        </div>
+        <div class="invalid-feedback">
+          This filed is invaild !
+        </div>
+      </div>
+      <div class="mb-3">
+        <input
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+          placeholder="Your password"
+          required
+        />
+        <div class="valid-feedback">
+        </div>
+        <div class="invalid-feedback">
+          This filed is invaild !
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
+</div>
