feat: add formValidator

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <h1 class="my-3">
       Account Login
     </h1>
-    <form action="/" method="POST" class="needs-validation" novalidate>
+    <form action="/" method="POST" class="needs-validation" id="LoginForm" novalidate>
       <div class="mb-3">
         <input
           type="email"
