feat: use express-session simulate user's login

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
       Account Login
     </h1>
     <form
-      action="/"
+      action="/login"
       method="POST"
       class="needs-validation"
       id="LoginForm"
